tests/purs/failing/CoercibleRoleMismatch1.purs
-- @shouldFailWith RoleMismatch
module Main where

data Identity a = Identity a

type role Identity phantom
